Small updates for Swagger docs
